Cambio en nombre e imagenes valvulas

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 </li>
                 <li class="splide__slide">
                   <a class="btn btn-color-primary btn-products" data-bs-toggle="collapse" href="#ballast" role="button" aria-expanded="false" aria-controls="collapseExample">
-                    ballast
+                    Filtration Systems
                   </a>
                 </li>
                 <li class="splide__slide">
@@ -283,7 +283,8 @@
               <div class="centered">
                 <h3 style="color: #606060; margin-bottom: 2rem;">Valves:</h3>
               </div>
-              <div class="row">
+
+              <!-- <div class="row">
 
                 <div class=" col-sm-12 col-md-4 mb-4">
 
@@ -406,8 +407,13 @@
                   </div>
                 </div>
 
+              </div> -->
+
+              <div class="centered">
+                <img class="img-valves" src="assets/img/products/valvesjunt.png" alt="..." />
               </div>
-              <div class="centered" style="margin-top: 1rem;">
+
+              <div class="centered">
                 <img class="img-marcs" src="assets/img/products/valves1.png" alt="..." />
               </div>
             </div>
