Cambio para arreglar conflictos

--- a/index.html
+++ b/index.html
@@ -575,13 +575,9 @@
                 </div>
 
               </div>
-              <div class="centered" style="margin-top: 1rem;">
-<<<<<<< HEAD
-                <img class="img-marcs" src="assets/img/products/rope4.png" alt="..." />
-=======
+              <!-- <div class="centered" style="margin-top: 1rem;">
                 <img class="img-marcs" src="assets/img/products/rope4_modified.png" alt="..." />
->>>>>>> 7366aef (Se cambio imagen es seccion rope)
-              </div>
+              </div> -->
             </div>
           </div>
 
