Cambio para arreglar conflictos

--- a/index.html
+++ b/index.html
@@ -575,9 +575,9 @@
                 </div>
 
               </div>
-              <!-- <div class="centered" style="margin-top: 1rem;">
+              <div class="centered" style="margin-top: 1rem;">
                 <img class="img-marcs" src="assets/img/products/rope4_modified.png" alt="..." />
-              </div> -->
+              </div>
             </div>
           </div>
 
